--- a/TextaFriend.html
+++ b/TextaFriend.html
@@ -1309,7 +1309,12 @@ I hope that as you played through this game you were able to notice the little w
 Dan Cox who provided the code for the instant messenger mechanics.
 Cox, Dan. [Dan Cox]. (2017, May 5). //Twine 2.1: Harlowe 2.0: Instant Messenger Mechanics//[Video]. Youtube. (link: &quot;https://www.youtube.com/watch?v=kjKRegikbYQ&quot;)[(goto-url:&quot;https://www.youtube.com/watch?v=kjKRegikbYQ&quot;)]
 
-This game was produced as the final creative project for (css: &quot;color: #00aabb;&quot;)[Ken Alba&#39;s] WR 152 class Gender in Electronic Fiction.</tw-passagedata><tw-passagedata pid="111" name="Ya? and?" tags="" position="1335.3333333333333,349.3333333333333" size="100,100">{ 
+(css: &quot;color: #00aabb;&quot;)[&#39;&#39;Story was inspired by:&#39;&#39;]
+&quot;He Beat Her&quot; by Angela He 
+&amp;
+&quot;The Day the Laughter Stopped&quot; by Hannes Flor
+
+This game was produced as the final creative project for (css: &quot;color: #00aabb;&quot;)[&#39;&#39;Ken Alba&#39;s&#39;&#39;] WR 152 class Gender in Electronic Fiction at Boston University.</tw-passagedata><tw-passagedata pid="111" name="Ya? and?" tags="" position="1335.3333333333333,349.3333333333333" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;I am nothing like them. Those guys are super muscular. I literally can&#39;t even do a singular pushup. They&#39;re all super tall. What am I? like barely 5 foot 8.&quot;) )
