--- a/TextaFriend.html
+++ b/TextaFriend.html
@@ -101,7 +101,7 @@ by Chelsea Zheng
 
 {(live: 12s)[Alrighty... I just finished my homework. Let&#39;s take a little break.
 [[Check Your Phone]]]}
-</tw-passagedata><tw-passagedata pid="2" name="Catherine" tags="" position="1649.3333333333333,1512.3333333333333" size="100,100">{
+</tw-passagedata><tw-passagedata pid="2" name="Catherine" tags="" position="1649,1512" size="100,100">{
 	&lt;! -- Save our response --&gt; 
 	(set: $responses to (a: &quot;Guess what! Guess what!&quot;) )
 	&lt;! -- Save their response --&gt; 
@@ -134,7 +134,7 @@ by Chelsea Zheng
 		]
 	]
 }
-</tw-passagedata><tw-passagedata pid="5" name="Phone" tags="" position="2847,1984.6666666666665" size="100,100">(alert: &quot;Hmmm. Who should I message back?&quot;)
+</tw-passagedata><tw-passagedata pid="5" name="Phone" tags="" position="2847,1984" size="100,100">(alert: &quot;Hmmm. Who should I message back?&quot;)
 
 &lt;div class=&quot;message&quot;&gt;[[Catherine]]
 	Guess what! Guess what!&lt;/div&gt;
@@ -158,7 +158,7 @@ by Chelsea Zheng
 
 |= 
 [[Ya? I&#39;ve heard of it. Wait! Have you made a post?]]
-|==|</tw-passagedata><tw-passagedata pid="7" name="What?...I&#39;m not playing games here" tags="" position="1520.0000000000002,1618.3333333333333" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="7" name="What?...I&#39;m not playing games here" tags="" position="1520,1618" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;I met the CUTEST boy&quot;) )
@@ -288,7 +288,7 @@ by Chelsea Zheng
 } 
 [[Return to Notifications -&gt;Phone]]
 
-</tw-passagedata><tw-passagedata pid="19" name="Esther" tags="" position="4324.333333333333,778.6666666666667" size="100,100">{
+</tw-passagedata><tw-passagedata pid="19" name="Esther" tags="" position="4324,778" size="100,100">{
 	&lt;! -- Save our response --&gt; 
 	(set: $responses to (a: &quot;Hey&quot;))
 	(set: $responses to it + (a: &quot;Hey, how&#39;d your date night with Max gooooo. Tell me all the details!&quot;) )
@@ -342,7 +342,7 @@ by Chelsea Zheng
 =| 
 [[Did you want him to kiss you and touch you like that?]]
 
-|==|</tw-passagedata><tw-passagedata pid="23" name="KEEP GOIngGGG! Why are you so slowww?????? spilllll" tags="" position="4028,1122.6666666666667" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="23" name="KEEP GOIngGGG! Why are you so slowww?????? spilllll" tags="" position="4028,1122" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;idk if I wanna talk about it anymore&quot;))
@@ -406,7 +406,7 @@ by Chelsea Zheng
 	(set: $Ester to 1)
 } 
 
-[[Return to Notifications!]] </tw-passagedata><tw-passagedata pid="29" name="No! Esther! Get that out of your head. He did not have the right to touch you like that! That&#39;s sexual assault." tags="" position="4744.666666666667,2032.3333333333333" size="200,100">{ 
+[[Return to Notifications!]] </tw-passagedata><tw-passagedata pid="29" name="No! Esther! Get that out of your head. He did not have the right to touch you like that! That&#39;s sexual assault." tags="" position="4744,2032" size="200,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;hmm... :(. That&#39;s a really big word. I don&#39;t think it is sexual assault. He&#39;s my boyfriend. You can&#39;t be abused by your own boyfriend. You are supposed to give your significant others sex.&quot;) )
@@ -461,7 +461,7 @@ by Chelsea Zheng
 [[Oh come on! Wdym you&#39;re not. Of course you are!]]
 =|
 [[ya. you&#39;re right you&#39;re not]]
-|==|</tw-passagedata><tw-passagedata pid="34" name="I&#39;ll make you one!!! It&#39;d be so fun. Maybe you could even make one for me, and we could go on a double date :)" tags="" position="1490.6666666666667,240.99999999999997" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="34" name="I&#39;ll make you one!!! It&#39;d be so fun. Maybe you could even make one for me, and we could go on a double date :)" tags="" position="1490,240" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;NO! Stop what you&#39;re doing right now! I&#39;ll make one for you, but you are NOT making one for.&quot;) )
@@ -477,7 +477,7 @@ by Chelsea Zheng
 
 =| 
 [[No? what about them?]]
-|==|</tw-passagedata><tw-passagedata pid="35" name="Ya? I&#39;ve heard of it. Wait! Have you made a post?" tags="" position="1978.6666666666667,132" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="35" name="Ya? I&#39;ve heard of it. Wait! Have you made a post?" tags="" position="1978,132" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;No omg. I could never.&quot;) )
@@ -500,7 +500,7 @@ by Chelsea Zheng
 
 =|
 [[ya. you&#39;re right you&#39;re not]]
-|==|</tw-passagedata><tw-passagedata pid="37" name="ya. you&#39;re right you&#39;re not" tags="" position="1899.6666666666667,422" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="37" name="ya. you&#39;re right you&#39;re not" tags="" position="1899,422" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;Guess I&#39;ll just be single forever...&quot;))
@@ -512,7 +512,7 @@ by Chelsea Zheng
 =|
 
 [[I really wish there weren&#39;t so many traditional stereotypes held against men and women when dating.]]
-|==|</tw-passagedata><tw-passagedata pid="38" name="No? what about them?" tags="" position="1657,322.66666666666663" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="38" name="No? what about them?" tags="" position="1657,322" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;They&#39;re all at least 6 feet tall, super muscular dudes. I mean they all have six pack. Not even six pack like eight pack. THEY&#39;RE HOT to say the least. Not only are they hot, they make 6 figure salaries and are basically the perfect guy&quot;) )
@@ -536,7 +536,7 @@ by Chelsea Zheng
 [[I really wish there weren&#39;t so many traditional stereotypes held against men and women when dating.]]
 =|
 [[We can be single together :/ we can make one of those pacts where we marry if we&#39;re both single by age 40]]
-|==|</tw-passagedata><tw-passagedata pid="40" name="People have different types!! Stay confident!" tags="" position="1653.3333333333333,567" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="40" name="People have different types!! Stay confident!" tags="" position="1653,567" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: &quot;Mmmm... I guess you&#39;re right?&quot;) )
 	(set: $responses to it + (a: &quot;Exactly! There are plenty of girls out there who are looking for a guy just like you. Dont be discouraged. &quot;) )
@@ -559,7 +559,7 @@ by Chelsea Zheng
 } 
 
 [[Return to Notifications --&gt;Phone]]
-</tw-passagedata><tw-passagedata pid="42" name="Well.. if you&#39;d let me make a post for you maybe you can :)." tags="" position="1421,688.6666666666666" size="100,100">{ 
+</tw-passagedata><tw-passagedata pid="42" name="Well.. if you&#39;d let me make a post for you maybe you can :)." tags="" position="1421,688" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;MMmm... idk&quot;) )
@@ -632,7 +632,7 @@ by Chelsea Zheng
 
 |= 
 [[Yes, of course]]
-|==|</tw-passagedata><tw-passagedata pid="48" name="Um. No? I&#39;m too busy for that" tags="" position="2972.6666666666665,88.33333333333333" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="48" name="Um. No? I&#39;m too busy for that" tags="" position="2972,88" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;You&#39;re kidding right?&quot;) )
@@ -652,12 +652,12 @@ by Chelsea Zheng
 	(display: &quot;Messenger&quot;)
 } 
 |= 
-[[Oh come on. You&#39;re relationship is making you popular what could be so bad]]
+[[Oh come on. Your relationship is making you popular what could be so bad]]
 
 =|
 [[Ya. I feel kind of bad for you guys. Everyone must be so annoying]]
 
-|==|</tw-passagedata><tw-passagedata pid="50" name="Yes! Of course I&#39;m kidding. I always have time for you &lt;3" tags="" position="2841.6666666666665,205" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="50" name="Yes! Of course I&#39;m kidding. I always have time for you &lt;3" tags="" position="2841,205" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;Well you know how Emily and I are dating right?&quot;) )
@@ -667,7 +667,7 @@ by Chelsea Zheng
 } 
 |= 
 
-[[Oh come on. You&#39;re relationship is making you popular what could be so bad]]
+[[Oh come on. Your relationship is making you popular what could be so bad]]
 
 =|
 [[Ya. I feel kind of bad for you guys. Everyone must be so annoying]]
@@ -684,11 +684,11 @@ by Chelsea Zheng
 	(display: &quot;Messenger&quot;)
 } 
 |= 
-[[Oh come on. You&#39;re relationship is making you popular what could be so bad]]
+[[Oh come on. Your relationship is making you popular what could be so bad]]
 =|
 [[Ya. I feel kind of bad for you guys. Everyone must be so annoying]]
 
-|==|</tw-passagedata><tw-passagedata pid="52" name="Oh come on. You&#39;re relationship is making you popular what could be so bad" tags="" position="3160.3333333333335,295.3333333333333" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="52" name="Oh come on. Your relationship is making you popular what could be so bad" tags="" position="3160,295" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;So?? I constantly get bombarded by so many ignorant people asking questions or sexualizing our relationship&quot;) )
@@ -776,7 +776,7 @@ by Chelsea Zheng
 =|
 [[Wait that sounds so fun. No one ever asks me that.]]
 
-|==|</tw-passagedata><tw-passagedata pid="59" name="And... What&#39;s so wrong about the good ole question &#39;who wears the pants&#39;" tags="" position="3067,446.3333333333333" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="59" name="And... What&#39;s so wrong about the good ole question &#39;who wears the pants&#39;" tags="" position="3067,446" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;Are you serious...&quot;) )
@@ -1041,7 +1041,7 @@ Oh, that&#39;s a lot of notifications! I guess I should check [[them-&gt;Phone]]
 [[Oh come on Esther! You can NOT do this to me. I am not leaving on a cliffhanger.]]
 =| 
 [[Wait. Why?]]
-|==|</tw-passagedata><tw-passagedata pid="87" name="Awww that&#39;s sweet. What happened next?" tags="" position="4480.333333333333,1263" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="87" name="Awww that&#39;s sweet. What happened next?" tags="" position="4480,1263" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;idk if I wanna talk about it anymore&quot;))
@@ -1063,7 +1063,7 @@ Oh, that&#39;s a lot of notifications! I guess I should check [[them-&gt;Phone]]
 [[Okay. Okay so you enjoyed it.]]
 =| 
 [[Just because you kissed him doesn&#39;t mean he&#39;s allowed to touch you like that?]]
-|==|</tw-passagedata><tw-passagedata pid="89" name="Oh come on Esther! You can NOT do this to me. I am not leaving on a cliffhanger." tags="" position="3980.6666666666665,1351.6666666666667" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="89" name="Oh come on Esther! You can NOT do this to me. I am not leaving on a cliffhanger." tags="" position="3980,1351" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;I guess... I can keep going if you really want me to...&quot;))
@@ -1260,7 +1260,7 @@ Oh, that&#39;s a lot of notifications! I guess I should check [[them-&gt;Phone]]
 	(if: $Esther is 2)[She talked to her boyfriend. He was understanding, and he never did anything else to her without explicit consent. They ended up staying together for quite some time longer. However, when it came to college they called it quits and are now living life at their respective colleges getting great grades and living their best lives. Work hard, play hard. What can they say? Through her experience and talking to you, she was able to identify toxic ways that gender roles in relationships are protrayed in media. This included more harmful protrayals like the need for the women to be submissive to her partners needs, but also smaller things such as how men are expected to make the first move.]
 }
 
-[[Let&#39;s take a look at someone else?-&gt;Yes]]</tw-passagedata><tw-passagedata pid="107" name="I really wish there weren&#39;t so many traditional stereotypes held against men and women when dating." tags="" position="2095.666666666667,495.3333333333333" size="100,100">{ 
+[[Let&#39;s take a look at someone else?-&gt;Yes]]</tw-passagedata><tw-passagedata pid="107" name="I really wish there weren&#39;t so many traditional stereotypes held against men and women when dating." tags="" position="2095,495" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;It sucks. I hate how the guy is expected to pay for the girl. I&#39;m not saying I won&#39;t pay, but why everytime? I don&#39;t have enough money for that. And, why do girls always date guys who are 6 feet and above. The whole entire 666 rules (6 foot, 6 figure salary, 6 pack) is so objectifying. I wanted to be loved for me and my personality, but if people can&#39;t even get past my looks, what am I supposed to do?&quot;) )
@@ -1282,7 +1282,7 @@ Oh, that&#39;s a lot of notifications! I guess I should check [[them-&gt;Phone]]
 } 
 
 [[Return to Notifications --&gt;Phone]]
-</tw-passagedata><tw-passagedata pid="109" name="Hey, don&#39;t be so discouraged my media representation of relationships" tags="" position="1972,696.6666666666666" size="100,100">{ 
+</tw-passagedata><tw-passagedata pid="109" name="Hey, don&#39;t be so discouraged my media representation of relationships" tags="" position="1972,696" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: &quot;How can I not be.&quot;) )
 	(set: $responses to it + (a: &quot;You have to remember. Media isn&#39;t always the reality. One day you&#39;ll find someone who looks past any perceived stereotypes and loves you for your personality and your looks. There are plenty of girls out there who are looking for a guy just like you. Dont be discouraged. &quot;) )
@@ -1314,7 +1314,7 @@ Cox, Dan. [Dan Cox]. (2017, May 5). //Twine 2.1: Harlowe 2.0: Instant Messenger 
 &amp;
 &quot;The Day the Laughter Stopped&quot; by Hannes Flor
 
-This game was produced as the final creative project for (css: &quot;color: #00aabb;&quot;)[&#39;&#39;Ken Alba&#39;s&#39;&#39;] WR 152 class Gender in Electronic Fiction at Boston University.</tw-passagedata><tw-passagedata pid="111" name="Ya? and?" tags="" position="1335.3333333333333,349.3333333333333" size="100,100">{ 
+This game was produced as the final creative project for (css: &quot;color: #00aabb;&quot;)[&#39;&#39;Ken Alba&#39;s&#39;&#39;] WR 152 class Gender in Electronic Fiction at Boston University.</tw-passagedata><tw-passagedata pid="111" name="Ya? and?" tags="" position="1335,349" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;I am nothing like them. Those guys are super muscular. I literally can&#39;t even do a singular pushup. They&#39;re all super tall. What am I? like barely 5 foot 8.&quot;) )
@@ -1325,7 +1325,7 @@ This game was produced as the final creative project for (css: &quot;color: #00a
 [[SooOOOoo. Everyone has a different type. You gotta stay confident!]]
 =|
 [[ya. you&#39;re right you&#39;re not]]
-|==|</tw-passagedata><tw-passagedata pid="112" name="SooOOOoo. Everyone has a different type. You gotta stay confident!" tags="" position="1258.6666666666667,542.6666666666666" size="100,100">{ 
+|==|</tw-passagedata><tw-passagedata pid="112" name="SooOOOoo. Everyone has a different type. You gotta stay confident!" tags="" position="1258,542" size="100,100">{ 
 	&lt;!-- Save our response from passage name --&gt;
 	(set: $responses to it + (a: (passage:)&#39;s name) )
 	(set: $responses to it + (a: &quot;Mmmm... I guess you&#39;re right?&quot;) )
